# centered

./: Cargo.toml  README.md  bundler.toml
.gitea/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.gitea/workflows/publish/: publish.yaml
src/: editor.rs  lib.rs  main.rs
