[package]
name = "centered"
version = "0.1.0"
edition = "2021"
authors = ["cozy dsp <hi@cozydsp.space>"]
license = "GPL-3.0-or-later"
homepage = "https://cozydsp.space"
description = "an attempt at recentering stereo signals"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cozy-ui = { git = "https://vcs.cozydsp.space/cozy-dsp/cozy-ui.git", version = "0.1.0" }
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/murl-digital/nih-plug.git", features = ["assert_process_allocs", "standalone"], branch = "feature/bump-dependencies"}
nih_plug_egui = { git = "https://github.com/murl-digital/nih-plug.git", branch = "feature/bump-dependencies" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
