[package]
name = "centered"
version = "0.1.0"
edition = "2021"
authors = ["cozy dsp <hi@cozydsp.space>"]
license = "GPL-3.0-or-later"
homepage = "https://cozydsp.space"
description = "an attempt at recentering stereo signals"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cozy-ui = { git = "https://vcs.cozydsp.space/cozy-dsp/cozy-ui.git", version = "0.1.0" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"]}
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui_extras = { version = "0.27", features = ["image"] }
image = { version = "0.24.9", default-features = false, features = ["png"] }

[build-dependencies]
anyhow = "1.0.81"
vergen = { version = "8.3.1", features = ["git", "gitcl"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
